--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
+    "firebase": "^8.1.1",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
