--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "types": [
       "@types/node",
       "@nuxt/types"
-    ]
+    ],
+    "resolveJsonModule": true,
   },
   "exclude": [
     "node_modules",
