--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@nuxt/typescript-runtime": "^2.0.0",
     "core-js": "^3.6.5",
     "firebase": "^8.1.1",
-    "nuxt": "^2.14.6"
+    "nuxt": "^2.14.6",
+    "vue-loading-overlay": "^3.4.2"
   },
   "devDependencies": {
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
